// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render active and joined and completed challenge item 1`] = `
<Card
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "backgroundColor": "#ffffff",
        "marginHorizontal": 16,
        "marginVertical": 5,
      },
      null,
    ]
  }
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "marginBottom": 3,
          }
        }
      >
        Read "There and Back Again"
      </MyText>
      <Flex
        align="center"
        direction="row"
        wrap="wrap"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          7 Days Left
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
              "fontWeight": "bold",
            }
          }
        />
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          5 Accepted
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
                "fontWeight": "bold",
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
              }
            }
          >
            3 Completed
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
    <Button
      disabled={true}
      onPress={[Function]}
      style={
        Object {
          "height": 30,
          "margin": 0,
          "opacity": 1,
          "paddingVertical": 0,
          "width": 30,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/check-blue.png",
          }
        }
      />
    </Button>
  </Flex>
</Card>
`;

exports[`render active and joined and completed challenge item 2`] = `
<Card
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "backgroundColor": "#ffffff",
        "marginHorizontal": 16,
        "marginVertical": 5,
      },
      null,
    ]
  }
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "marginBottom": 3,
          }
        }
      >
        Read "There and Back Again"
      </MyText>
      <Flex
        align="center"
        direction="row"
        wrap="wrap"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          7 Days Left
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
              "fontWeight": "bold",
            }
          }
        />
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          5 Accepted
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
                "fontWeight": "bold",
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
              }
            }
          >
            3 Completed
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
    <Button
      disabled={true}
      onPress={[Function]}
      style={
        Object {
          "height": 30,
          "margin": 0,
          "opacity": 1,
          "paddingVertical": 0,
          "width": 30,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/check-blue.png",
          }
        }
      />
    </Button>
  </Flex>
</Card>
`;

exports[`render active and joined challenge item 1`] = `
<Card
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "backgroundColor": "#ffffff",
        "marginHorizontal": 16,
        "marginVertical": 5,
      },
      null,
    ]
  }
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "marginBottom": 3,
          }
        }
      >
        Read "There and Back Again"
      </MyText>
      <Flex
        align="center"
        direction="row"
        wrap="wrap"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          7 Days Left
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
              "fontWeight": "bold",
            }
          }
        />
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          5 Accepted
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
                "fontWeight": "bold",
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
              }
            }
          >
            3 Completed
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
    <Button
      disabled={false}
      onPress={[Function]}
      style={
        Object {
          "height": 30,
          "margin": 0,
          "opacity": 1,
          "paddingVertical": 0,
          "width": 30,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/check-grey.png",
          }
        }
      />
    </Button>
  </Flex>
</Card>
`;

exports[`render active and joined challenge item with edit 1`] = `
<Card
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "backgroundColor": "#ffffff",
        "marginHorizontal": 16,
        "marginVertical": 5,
      },
      null,
    ]
  }
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "marginBottom": 3,
          }
        }
      >
        Read "There and Back Again"
      </MyText>
      <Flex
        align="center"
        direction="row"
        wrap="wrap"
      >
        <React.Fragment>
          <Button
            buttonTextStyle={
              Object {
                "color": "#52C5DC",
                "fontSize": 11,
                "fontWeight": "300",
                "letterSpacing": 1,
              }
            }
            onPress={[Function]}
            text="Edit"
            type="transparent"
          />
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
                "fontWeight": "bold",
              }
            }
          />
        </React.Fragment>
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          7 Days Left
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
              "fontWeight": "bold",
            }
          }
        />
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          5 Accepted
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
                "fontWeight": "bold",
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
              }
            }
          >
            3 Completed
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
    <Button
      disabled={false}
      onPress={[Function]}
      style={
        Object {
          "height": 30,
          "margin": 0,
          "opacity": 1,
          "paddingVertical": 0,
          "width": 30,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/check-grey.png",
          }
        }
      />
    </Button>
  </Flex>
</Card>
`;

exports[`render active challenge item 1`] = `
<Card
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "backgroundColor": "#ffffff",
        "marginHorizontal": 16,
        "marginVertical": 5,
      },
      Object {
        "borderColor": "#52C5DC",
        "borderWidth": 1,
      },
    ]
  }
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "marginBottom": 3,
          }
        }
      >
        Read "There and Back Again"
      </MyText>
      <Flex
        align="center"
        direction="row"
        wrap="wrap"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          7 Days Left
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
              "fontWeight": "bold",
            }
          }
        />
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          5 Accepted
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
                "fontWeight": "bold",
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
              }
            }
          >
            3 Completed
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
  </Flex>
  <Button
    buttonTextStyle={
      Object {
        "fontSize": 14,
      }
    }
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": undefined,
        "paddingVertical": 8,
      }
    }
    text="JOIN CHALLENGE"
    type="primary"
  />
</Card>
`;

exports[`render active challenge item with edit 1`] = `
<Card
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "backgroundColor": "#ffffff",
        "marginHorizontal": 16,
        "marginVertical": 5,
      },
      Object {
        "borderColor": "#52C5DC",
        "borderWidth": 1,
      },
    ]
  }
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "marginBottom": 3,
          }
        }
      >
        Read "There and Back Again"
      </MyText>
      <Flex
        align="center"
        direction="row"
        wrap="wrap"
      >
        <React.Fragment>
          <Button
            buttonTextStyle={
              Object {
                "color": "#52C5DC",
                "fontSize": 11,
                "fontWeight": "300",
                "letterSpacing": 1,
              }
            }
            onPress={[Function]}
            text="Edit"
            type="transparent"
          />
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
                "fontWeight": "bold",
              }
            }
          />
        </React.Fragment>
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          7 Days Left
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
              "fontWeight": "bold",
            }
          }
        />
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          5 Accepted
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
                "fontWeight": "bold",
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
              }
            }
          >
            3 Completed
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
  </Flex>
  <Button
    buttonTextStyle={
      Object {
        "fontSize": 14,
      }
    }
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": undefined,
        "paddingVertical": 8,
      }
    }
    text="JOIN CHALLENGE"
    type="primary"
  />
</Card>
`;

exports[`render past and active and completed challenge item 1`] = `
<Card
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "backgroundColor": "#ffffff",
        "marginHorizontal": 16,
        "marginVertical": 5,
      },
      null,
    ]
  }
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "marginBottom": 3,
          }
        }
      >
        Read "There and Back Again"
      </MyText>
      <Flex
        align="center"
        direction="row"
        wrap="wrap"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          21 Day Challenge
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
              "fontWeight": "bold",
            }
          }
        />
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          5 Accepted
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
                "fontWeight": "bold",
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
              }
            }
          >
            3 Completed
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
    <Button
      disabled={true}
      onPress={[Function]}
      style={
        Object {
          "height": 30,
          "margin": 0,
          "opacity": 1,
          "paddingVertical": 0,
          "width": 30,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/check-blue.png",
          }
        }
      />
    </Button>
  </Flex>
</Card>
`;

exports[`render past and active challenge item 1`] = `
<Card
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "backgroundColor": "#ffffff",
        "marginHorizontal": 16,
        "marginVertical": 5,
      },
      null,
    ]
  }
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "marginBottom": 3,
          }
        }
      >
        Read "There and Back Again"
      </MyText>
      <Flex
        align="center"
        direction="row"
        wrap="wrap"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          21 Day Challenge
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
              "fontWeight": "bold",
            }
          }
        />
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          5 Accepted
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
                "fontWeight": "bold",
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
              }
            }
          >
            3 Completed
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
    <Button
      disabled={false}
      onPress={[Function]}
      style={
        Object {
          "height": 30,
          "margin": 0,
          "opacity": 1,
          "paddingVertical": 0,
          "width": 30,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/check-grey.png",
          }
        }
      />
    </Button>
  </Flex>
</Card>
`;

exports[`render past challenge item 1`] = `
<Card
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "backgroundColor": "#ffffff",
        "marginHorizontal": 16,
        "marginVertical": 5,
      },
      null,
    ]
  }
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "marginBottom": 3,
          }
        }
      >
        Read "There and Back Again"
      </MyText>
      <Flex
        align="center"
        direction="row"
        wrap="wrap"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          9 Day Challenge
        </MyText>
        <Dot
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
              "fontWeight": "bold",
            }
          }
        />
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 11,
            }
          }
        >
          5 Accepted
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
                "fontWeight": "bold",
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 11,
              }
            }
          >
            3 Completed
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;
